# NLP

./: pyproject.toml  requirements.txt
data/: labels.csv  processed.csv  processed_v2.csv  queries.csv
data/sample/: lab4_gold_ie.jsonl  processed_v2_sample.csv  splits_test_ids.txt  splits_train_ids.txt  splits_val_ids.txt
docs/: audit_summary_lab2.md  audit_summary_lab3.md  audit_summary_lab4.md  audit_summary_lab5.md  audit_summary_lab6.md  audit_summary_lab7.md  dataset_card.md  ie_policy.md  labeling_guidelines.md  leakage_risk_report_lab5.md  preprocess_policy.md  splits_manifest_lab5.json
labs/lab02/: README.md
labs/lab03/: README.md
labs/lab04/: README.md
labs/lab05/: README.md
labs/lab06/: README.md
labs/lab07/: README.md
notebooks/: lab1_data_audit.ipynb  lab2_cleaning_normalization.ipynb  lab3_lemma_pos_baseline.ipynb  lab4_rule_based_ie.ipynb  lab5_split_leakage_checks.ipynb  lab6_tfidf_logistic_baseline.ipynb  lab7_linear_svm_char_ngrams.ipynb
resources/: currencies.json  locations_lviv.json  months_ua.json  weekdays_ua.json
src/: classification_baseline.py  ie_rules.py  ling_features.py  preprocess.py  split.py  svm_experiments.py  threshold_eval.py
tests/: edge_cases.jsonl  ie_edge_cases.jsonl  ling_edge_cases.jsonl
