[project]
name = "nlp-vivchar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "tokenize-uk>=0.2.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
